@@ -2,7 +2,7 @@
 <plugin_manifest xmlns="http://www.elgg.org/plugin_manifest/1.8">
 	<name>Moderated Comments</name>
 	<author>Matt Beckett (matt@clever-name.com)</author>
-	<version>1.3</version>
+	<version>1.4</version>
 	<description>For use in conjunction with speak_freely.  If a content object is made public then any anonymous comments will be moderated by the content owner</description>
 	<website>http://clever-name.com</website>
 	<copyright>(C) Athabasca University</copyright>
