@@ -10,15 +10,12 @@ include_once 'lib/functions.php';
 
 function moderated_comments_init() {
 
-	// Load system configuration
-	global $CONFIG;
-
 	// Extend system CSS with our own styles
 	elgg_extend_view('css','moderated_comments/css');
 	elgg_register_js('moderated_comments', elgg_get_site_url() . "mod/moderated_comments/js/javascript.js");
 
 	// Load the language file
-	register_translations($CONFIG->pluginspath . "moderated_comments/languages/");
+	register_translations(elgg_get_plugins_path() . "moderated_comments/languages/");
 
 	//register action to approve/delete comments
 	elgg_register_action("annotation/review", elgg_get_plugins_path() . "moderated_comments/actions/annotation/review.php");
@@ -33,16 +30,16 @@ function moderated_comments_init() {
 
 
 // call init
-register_elgg_event_handler('init','system','moderated_comments_init');
+elgg_register_event_handler('init','system','moderated_comments_init');
 
 // check if newly created comment needs to be reviewed
-register_elgg_event_handler('create','annotation','moderated_comments_check');
+elgg_register_event_handler('create','annotation','moderated_comments_check');
 
 // check if newly created entity is public - if so moderate
-register_elgg_event_handler('create','all','moderated_comments_entity_create');
+elgg_register_event_handler('create','all','moderated_comments_entity_create');
 
 // check if newly updated entity is public - if so moderate
-register_elgg_event_handler('update','all','moderated_comments_entity_create');
+elgg_register_event_handler('update','all','moderated_comments_entity_create');
 
 // extend the form view to present a notice that comments are moderated
 elgg_extend_view('page/components/list', 'comments/forms/moderated_comments_pre_edit', 501);
